# aether

./: .gitignore  CMakeLists.txt  README.md  notes
docs/public/: block_diagram.odg  notes  sensor.odg
docs/public/aether/: grid.css  index.html  plant-theme.css
include/aether/: db.hpp  router.hpp
sensor/: Makefile  Makefile.config.example  notes  sketch.cpp  sketch.hpp  timer.cpp  timer.hpp
sensor/bitbucket/: eeprom.cpp  eeprom.hpp  lcd.cpp
sensor/sensor/: configuration.cpp  configuration.hpp  eeprom.cpp  eeprom.hpp  lcd.cpp  lcd.hpp  measure.cpp  measure.hpp  radio.cpp  radio.hpp  sketch.cpp  sketch.hpp  timer.cpp
src/: CMakeLists.txt  db.cpp  kb_router.cpp  kb_router.hpp  radio_server.cpp  radio_server.hpp  router.cpp  sensor_api.cpp  sensor_api.hpp  temperature_model.cpp  temperature_model.hpp  weather_router.cpp  weather_router.hpp
src/main/: aether.cpp  aether.hpp  export_knowledgebase.cpp  export_knowledgebase.hpp  import_knowledgebase.cpp  import_knowledgebase.hpp
src/openweathermap/: CMakeLists.txt  city.hpp  city_to_location.cpp  city_to_location.hpp  coord.hpp  forecast.hpp  point.hpp  request_forecast.cpp  request_forecast.hpp  retrieve_forecast.cpp  retrieve_forecast.hpp
src/openweathermap/test/: city_to_location.cpp  forecast.cpp
src/task/: CMakeLists.txt  retrieve_forecast.cpp  retrieve_forecast.hpp
src/test/: temperature_model.cpp
web/: CMakeLists.txt  aether.css  application.js  board.html  board.js  chart.js  index.html  index.js  knowledgebase.html  knowledgebase.js  knowledgebase_editor.html  knowledgebase_editor.js  models.js  palette.html  palette.js  sensors.html  sensors.js  settings.html  settings.js  weather.html  weather.js
