add_library(
    aether-db
    db.cpp
    )
target_link_libraries(
    aether-db
    atlas-com-db
    )
add_library(
    aether-server-lib
    kb_router.cpp
    radio_server.cpp
    router.cpp
    sensor_api.cpp
    )
include_directories(./)
add_subdirectory(openweathermap)
add_subdirectory(task)
target_link_libraries(
    aether-server-lib
    aether-db
    aether-openweathermap
    aether-task
    atlas-com-api
    atlas-com-db
    atlas-com-http-server
    hades
    ${CMAKE_CURRENT_BINARY_DIR}/../web/static.a
    ${CMAKE_THREAD_LIBS_INIT}
    ${Boost_LIBRARIES}
    )

