add_library(
    aether-db
    db.cpp
    )
target_link_libraries(
    aether-db
    atlas-com-db
    )
add_library(
    aether-server-lib
    kb_router.cpp
    radio_server.cpp
    router.cpp
    sensor_api.cpp
    temperature_model.cpp
    weather_router.cpp
    )
include_directories("/usr/include/eigen3")
include_directories(./)
add_subdirectory(openweathermap)
add_subdirectory(task)
target_link_libraries(
    aether-server-lib
    aether-db
    aether-openweathermap
    aether-task
    atlas-auth
    atlas-com-api
    atlas-com-db
    atlas-com-http-server
    hades
    ${CMAKE_CURRENT_BINARY_DIR}/../web/static.a
    ${CMAKE_THREAD_LIBS_INIT}
    ${Boost_LIBRARIES}
    )

add_executable(
    aether-test
    test/main.cpp
    test/temperature_model.cpp
)
target_link_libraries(
    aether-test
    aether-server-lib
)
add_test(aether-test aether-test)
